--- a/Suaah/Areas/Customer/Views/FlightBookings/FlightSummary.cshtml
+++ b/Suaah/Areas/Customer/Views/FlightBookings/FlightSummary.cshtml
@@ -7,12 +7,12 @@
         <div class="backgroundWhiteBorder">
             <div class="container">
                 <div class="card">
-                    <div class="card-header bg-dark text-light ml-0 row container">
+                    <div class="card-header bg-dark text-light ml-0">
                         <div class="col-6">
                             <i class="fa fa-shopping-cart"></i> &nbsp;
                             Order Summary
                         </div>
-                        <div class="col-6 text-right">
+                        <div class="col-6 text-end">
                             <a asp-action="BookingList" class="btn btn-outline-info btn-sm">Back to Bookings</a>
                         </div>
                     </div>
