--- a/Suaah/Areas/Admin/Views/FlightBookingHeaders/Details.cshtml
+++ b/Suaah/Areas/Admin/Views/FlightBookingHeaders/Details.cshtml
@@ -5,7 +5,8 @@
     if (DateTime.Now.Millisecond > canceltime.Millisecond)
         cancel = false;
 }
-<h1>Hotel Booking Details for Booking No. @Model.ID</h1>
+<br />
+<h1>Flight Booking Details for Booking No. @Model.ID</h1>
 
 <form method="post">
         <br />
